# zerobase

./: .dockerignore  .gitignore  AGENTS_HISTORY.md  Cargo.toml  Cross.toml  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  sample.zerobase.toml  zerobase.toml
.github/workflows/: ci.yml
AGENTS_HISTORY/: 2026-03-20_22-45_project_planning.md  2026-03-20_23-15_qa_enrichment.md  2026-03-20_23-30_architecture_document.md  2026-03-20_23-45_workspace_initialization.md  2026-03-20_ci-pipeline-setup.md  2026-03-20_project_plan_zerobase.json  2026-03-20_qa_enrichment_zerobase.json  2026-03-20_sqlite_db_abstraction_layer.md  2026-03-20_structured-logging-tracing.md  2026-03-20_test_infrastructure.md  2026-03-21-1400-auth-system-architecture.md  2026-03-21-1530-hooks-system-design.md  2026-03-21_00-10_error_handling.md  2026-03-21_00-30_configuration_management.md  2026-03-21_01-00_axum_server_health_endpoint.md  2026-03-21_01-30_sqlite_connection_pool.md  2026-03-21_02-00_database_migration_system.md  2026-03-21_02-30_system_tables_schema.md  2026-03-21_03-00_collection_field_type_system.md  2026-03-21_04-00_schema_alteration.md  2026-03-21_05-00_field_validation_engine.md  2026-03-21_06-00_id_generation_strategy.md  2026-03-21_06-28-48_auth_refresh_endpoint.md  2026-03-21_07-00_select_multiselect_field_types.md  2026-03-21_08-00_json_field_type.md  2026-03-21_09-00_editor_field_type.md  2026-03-21_09-23_s3_storage_backend.md  2026-03-21_10-00_datetime_field_type.md  2026-03-21_11-00_autodate_field_type.md  2026-03-21_12-00_number_field_type.md  2026-03-21_12-56_implement-admin-api-client.md  2026-03-21_124900_init-astro-frontend.md  2026-03-21_13-00_bool_field_type.md  2026-03-21_13-03_implement-admin-login-page.md  2026-03-21_13-10_dashboard-layout-navigation.md  2026-03-21_13-15_collections-list-view.md  2026-03-21_13-25_collection-schema-editor.md  2026-03-21_13-42_implement-records-browser.md  2026-03-21_14-00_email_field_type.md  2026-03-21_14-17_auth-providers-settings-page.md  (+129 more)
crates/zerobase-admin/: Cargo.toml
crates/zerobase-admin/src/: dashboard.rs  lib.rs
crates/zerobase-admin/tests/: dashboard_serving.rs
crates/zerobase-api/: Cargo.toml
crates/zerobase-api/src/: lib.rs  response.rs
crates/zerobase-api/src/handlers/: admins.rs  auth.rs  backups.rs  batch.rs  collections.rs  email_change.rs  export.rs  external_auths.rs  files.rs  health.rs  logs.rs  mfa.rs  mod.rs  multipart.rs  oauth2.rs  openapi.rs  otp.rs  passkey.rs  password_reset.rs  realtime.rs  records.rs  settings.rs  verification.rs
crates/zerobase-api/src/middleware/: auth_context.rs  body_limit.rs  cors.rs  mod.rs  rate_limit.rs  request_id.rs  request_logging.rs  require_superuser.rs  security_headers.rs
crates/zerobase-api/tests/: access_rules_cross_cutting.rs  admin_auth_endpoints.rs  auth_endpoints.rs  auth_integration.rs  auth_middleware.rs  auth_refresh.rs  backup_endpoints.rs  batch_endpoints.rs  collections_endpoints.rs  cors_configuration.rs  export_endpoints.rs  external_auths_endpoints.rs  file_download_endpoints.rs  file_storage_integration.rs  file_upload_endpoints.rs  health_db_endpoint.rs  health_endpoint.rs  log_endpoints.rs  oauth2_endpoints.rs  pocketbase_compatibility_integration.rs  realtime_endpoints.rs  realtime_subscriptions_integration.rs  records_endpoints.rs  records_rules_integration.rs  relations_expansion_integration.rs  settings_endpoints.rs  test_infrastructure.rs  tracing_integration.rs
crates/zerobase-api/tests/common/: mod.rs
crates/zerobase-auth/: Cargo.toml
crates/zerobase-auth/src/: email.rs  email_change.rs  lib.rs  mfa.rs  oauth2.rs  otp.rs  passkey.rs  password.rs  password_reset.rs  security_tests.rs  token.rs  verification.rs
crates/zerobase-auth/src/providers/: google.rs  microsoft.rs  mod.rs
crates/zerobase-core/: Cargo.toml
crates/zerobase-core/src/: auth.rs  configuration.rs  error.rs  hooks.rs  id.rs  lib.rs  oauth.rs  storage.rs  telemetry.rs  webhooks.rs
crates/zerobase-core/src/email/: mod.rs  templates.rs
crates/zerobase-core/src/schema/: collection.rs  field.rs  mod.rs  record_validator.rs  rule_engine.rs  rule_parser.rs  rules.rs  validation.rs
crates/zerobase-core/src/services/: backup_service.rs  collection_service.rs  expand.rs  external_auth.rs  log_service.rs  mod.rs  record_service.rs  settings_service.rs  superuser_service.rs  webauthn_credential.rs
crates/zerobase-core/src/webhooks/: dispatcher.rs  hook.rs  model.rs  service.rs
crates/zerobase-db/: Cargo.toml
crates/zerobase-db/benches/: record_operations.rs
crates/zerobase-db/src/: backup_repo.rs  error.rs  external_auth_repo.rs  filter.rs  fts.rs  lib.rs  log_repo.rs  pool.rs  query_builder.rs  record_repo.rs  schema_repo.rs  settings_repo.rs  superuser_repo.rs  unique.rs  webauthn_credential_repo.rs
crates/zerobase-db/src/migrations/: mod.rs  system.rs
crates/zerobase-db/tests/: sqlite_concurrency_integrity.rs
crates/zerobase-files/: Cargo.toml
crates/zerobase-files/src/: lib.rs  local.rs  s3.rs  service.rs  thumb.rs
crates/zerobase-hooks/: Cargo.toml
crates/zerobase-hooks/src/: bindings.rs  engine.rs  error.rs  lib.rs  live_dao.rs  watcher.rs
crates/zerobase-server/: Cargo.toml  build.rs
crates/zerobase-server/examples/: framework_mode.rs
crates/zerobase-server/src/: cli.rs  js_routes.rs  lib.rs  main.rs  shutdown.rs
crates/zerobase-server/tests/: smoke_test.rs
docs/: api-reference.md  architecture.md  configuration-reference.md  deployment-guide.md  migration-from-pocketbase.md
docs/adr/: 001-sqlite-database-abstraction.md
docs/architecture/: auth-system.md
docs/design/: admin-dashboard-uiux.md  component-inventory.md  extensibility-hooks-system.md  navigation-flow.md
docs/plans/: 2026-03-21-access-rules-system.md  2026-03-21-file-storage-abstraction.md  (+1 more)
docs/use-cases/: README.md  (+6 more)
e2e-file-share-test/: Cargo.toml  TEST.md
e2e-file-share-test/src/: main.rs
frontend/: astro.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
scripts/: docker-test.sh  release-build.sh
(+118 files in other folders)
