[package]
name = "zerobase-auth"
version.workspace = true
edition.workspace = true

[dependencies]
zerobase-core = { workspace = true }
zerobase-db = { workspace = true }
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }
oauth2 = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
lettre = { workspace = true }
rand = { workspace = true }
nanoid = { workspace = true }
tokio = { workspace = true }
totp-rs = { workspace = true }
webauthn-rs = { workspace = true }
webauthn-rs-proto = { workspace = true }
url = { workspace = true }
data-encoding = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
wiremock = { workspace = true }
